--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -84,10 +84,10 @@ dynamic_background_opacity yes
 
 # keyboard shortcuts ----------------------------------------------------------
 
-map ctrl+shift+f2 launch --type=tab kitty +edit-config
+map kitty_mod+f2 launch --type=tab kitty +edit-config
 
-map ctrl+shift+. resize_window wider
-map ctrl+shift+, resize_window narrower
+map kitty_mod+. resize_window wider
+map kitty_mod+, resize_window narrower
 
 map ctrl+page_down next_tab
 map ctrl+shift+page_up move_tab_backward
@@ -95,19 +95,22 @@ map ctrl+shift+page_down move_tab_forward
 map ctrl+page_up previous_tab
 map f13 previous_tab
 
-map ctrl+F4 close_window
 map ctrl+shift+0 restore_font_size
+
+# tab/window management
+
+map ctrl+F4 close_window
 # map kitty_mod+enter new_window_with_cwd
 map kitty_mod+enter launch --type=window --cwd=last_reported
 # map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+t launch --type=tab --cwd=last_reported --location=neighbor
 map kitty_mod+d detach_window new-tab
 map kitty_mod+alt+a detach_window ask
+# f11 to "zoom into window"
+map f11 toggle_layout stack
 
-map kitty_mod+p paste_from_selection
 
-map ctrl+shift+up   set_background_opacity -0.12
-map ctrl+shift+down set_background_opacity +0.12
+# interactionw with terminal output
 
 # AltGr + f for file hints
 #map ø kitten hints --hints-text-color 'yellow' --type path --program -
@@ -118,9 +121,20 @@ map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : past
 
 # map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
 
-map ctrl+shift+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R : send_text normal,application /
+map kitty_mod+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R : send_text normal,application /
+# map kitty_mod+h launch --type=overlay vi -c "te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 
 map ctrl+alt+f launch --type=overlay --stdin-source=@screen_scrollback fzf --info inline --no-sort --bind "ctrl-y:execute-silent(echo -n {} | xclip -i -selection primary),ctrl-h:backward-kill-word" --exact -i
+
+map kitty_mod+j launch --type=overlay --stdin-source=@screen_scrollback --title="vi: kitty scrollback" nvim -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0 | norm G" -c "call search('^.', 'b') | norm zb" -
+
+
+# other
+
+map kitty_mod+p paste_from_selection
+
+map kitty_mod+up   set_background_opacity -0.12
+map kitty_mod+down set_background_opacity +0.12
 
 # map shift+enter send_text all \x1b[13;2u
 # map ctrl+enter send_text all \x1b[13;5u
@@ -128,7 +142,7 @@ map ctrl+alt+f launch --type=overlay --stdin-source=@screen_scrollback fzf --inf
 #map ctrl+9 send_text all \x1b[25~
 # F14
 #map ctrl+0 send_text all \x1b[26~
-map ctrl+. send_text all 
+# map ctrl+. send_text all 
 
 
 # general config --------------------------------------------------------------
@@ -141,7 +155,8 @@ map ctrl+f4 close_window_with_confirmation ignore-shell
 scrollback_lines 200000
 #scrollback_pager vim-ansi -c "autocmd BufRead * normal G"
 #scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
-scrollback_pager vi -n -R -c "let g:pager_mode = 1" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "set nonu nornu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
+# scrollback_pager vi -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 10000"
+scrollback_pager nvim -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0 | silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer && sleep 10000" -c "norm G" -c "call search('^.', 'b') | norm zb"
 
 
 allow_remote_control yes
@@ -170,3 +185,9 @@ color12           #788EFF
 color13           #FF4DFF
 color14           #26FFFE
 color15           #EDECEA
+
+
+
+
+
+
