--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,3 @@
-# vim: ft=config
 # font ------------------------------------------------------------------------
 
 font_family       JuliaMono Medium
@@ -81,6 +80,7 @@ input_delay 1
 #background_opacity 0.90
 dynamic_background_opacity yes
 
+map ctrl+shift+w toggle_marker iregex 1 \\bERROR\\b 2 \\bWARNING\\b
 
 # keyboard shortcuts ----------------------------------------------------------
 
@@ -121,7 +121,7 @@ map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : past
 
 # map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
 
-map kitty_mod+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R : send_text normal,application /
+map kitty_mod+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less +G -R : send_text normal,application ?
 # map kitty_mod+h launch --type=overlay vi -c "te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 
 map ctrl+alt+f launch --type=overlay --stdin-source=@screen_scrollback fzf --info inline --no-sort --bind "ctrl-y:execute-silent(echo -n {} | xclip -i -selection primary),ctrl-h:backward-kill-word" --exact -i
@@ -163,6 +163,12 @@ allow_remote_control yes
 listen_on unix:@kittyc1748
 
 
+# shell integration -----------------------------------------------------------
+
+# https://www.reddit.com/r/KittyTerminal/comments/17if0gc/kitty_v0301_sudo_alias/
+shell_integration no-sudo
+
+
 # colors ----------------------------------------------------------------------
 inactive_text_alpha 0.8
 
@@ -185,9 +191,6 @@ color12           #788EFF
 color13           #FF4DFF
 color14           #26FFFE
 color15           #EDECEA
-
-
-
 
 
 
