--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -105,10 +105,10 @@ map kitty_mod+enter launch --type=window --cwd=last_reported
 # map kitty_mod+t new_tab_with_cwd !neighbor
 map kitty_mod+t launch --type=tab --cwd=last_reported --location=neighbor
 map kitty_mod+d detach_window new-tab
-map kitty_mod+alt+a detach_window ask
+map kitty_mod+alt+d detach_tab
+map kitty_mod+m detach_window ask
 # f11 to "zoom into window"
 map f11 toggle_layout stack
-
 
 # interactionw with terminal output
 
@@ -118,6 +118,9 @@ map oslash kitten hints --hints-text-color 'yellow' --hints-background-color 'bl
 
 # Alt + , for pasting last output
 map alt+, combine : launch --stdin-source=@last_cmd_output --type=primary : paste_from_selection
+# right click on output selects it
+mouse_map right press ungrabbed mouse_select_command_output
+# map f4 show_last_command_output
 
 # map kitty_mod+/      launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
 
@@ -126,12 +129,12 @@ map kitty_mod+/ combine : launch --stdin-source=@screen_scrollback --stdin-add-f
 
 map ctrl+alt+f launch --type=overlay --stdin-source=@screen_scrollback fzf --info inline --no-sort --bind "ctrl-y:execute-silent(echo -n {} | xclip -i -selection primary),ctrl-h:backward-kill-word" --exact -i
 
-map kitty_mod+j launch --type=overlay --stdin-source=@screen_scrollback --title="vi: kitty scrollback" nvim -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0 | norm G" -c "call search('^.', 'b') | norm zb" -
-
-
 # other
 
-map kitty_mod+p paste_from_selection
+# map ctrl+p paste_from_selection
+# map kitty_mod+p paste_from_selection
+map ctrl+[ paste_from_selection
+map ctrl+shift+p>p no_op
 
 map kitty_mod+up   set_background_opacity -0.12
 map kitty_mod+down set_background_opacity +0.12
@@ -156,7 +159,21 @@ scrollback_lines 200000
 #scrollback_pager vim-ansi -c "autocmd BufRead * normal G"
 #scrollback_pager nvim -c "set nonumber nolist foldcolumn=0 noruler" -c "autocmd TermOpen * normal G" -c "map q :qa!<CR>" -c "set clipboard+=unnamedplus" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 1000 "
 # scrollback_pager vi -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu" -c "silent write! /tmp/kitty_scrollback_buffer | te echo -n \"$(cat /tmp/kitty_scrollback_buffer)\" && sleep 10000"
-scrollback_pager nvim -n -R -c "let g:pager_mode = 1 | map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0 | silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer && sleep 10000" -c "norm G" -c "call search('^.', 'b') | norm zb"
+scrollback_pager env VI_PAGER=1 nvim -n -R -c "map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0 | silent write! /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer && sleep 10000" -c "norm G"
+
+map kitty_mod+j launch --type=overlay --stdin-source=@screen_scrollback --title="vi: kitty scrollback" --env VI_PAGER=1 nvim -n -R -c "map q :qa!<CR> | set clipboard+=unnamedplus | set nonu nornu cmdheight=0 so=0" -c "call search('^.', 'b') | norm k$" -
+
+
+# kitty-scrollback.nvim -------------------------------------------------------
+# kitty-scrollback.nvim Kitten alias
+# action_alias kitty_scrollback_nvim kitten /home/ca/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py --env VI_PAGER=1
+
+# # Browse scrollback buffer in nvim
+# map kitty_mod+h kitty_scrollback_nvim
+# # Browse output of the last shell command in nvim
+# map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# # Show clicked command output in nvim
+# mouse_map kitty_mod+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
 
 allow_remote_control yes
@@ -173,7 +190,7 @@ shell_integration no-sudo
 inactive_text_alpha 0.8
 
 foreground        #F0F0F0
-background		  #0a0a0a
+background		  #000000
 color0            #3E3E3E
 color1            #C9205A
 color2            #00AC07
@@ -192,5 +209,7 @@ color13           #FF4DFF
 color14           #26FFFE
 color15           #EDECEA
 
+cursor #ffffff
+cursor_blink_interval 0.4
 
 
